[metadata]
name = ptero_workflow
version = 0.0.1
summary = Workflow frontend REST API
description-file =
    README.md

[files]
packages =
    ptero_workflow

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
reports =
    workflow-outputs = ptero_workflow.api.v1.reports.workflow_outputs:report
