[metadata]
name = ptero_workflow
version = 0.0.1
summary = Workflow frontend REST API
description-file =
    README.md

[files]
packages =
    ptero_workflow
resources =
    apis/v1/schemas/ *.json = v1_schemas

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    ptero_workflow_execution_wrapper = ptero_workflow.scripts.execution_wrapper:main
